Adds a favicon via emoji, and modifies the gallery partial to be more minimal. Also created gallery footer to be the bottom of the site. Will need to get images to populate this

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,4 +3,5 @@
 	{{ partial "items" site.Data.party }}
 	{{ partial "schedule_table" . }}
 	{{ partial "spotlight" site.Data.rsvp }}
+	{{ partial "gallery" site.Data.footer_gallery }}
 {{ end }}
