Added final art, updated table etc:

--- a/themes/hugo-story/assets/sass/components/_banner.scss
+++ b/themes/hugo-story/assets/sass/components/_banner.scss
@@ -253,7 +253,7 @@
 			@include vendor('flex-shrink', '0');
 			border-radius: 0;
 			width: 50%;
-			background-color: #FB8936;
+			background-color: #ffffff;
 
 			img {
 				@include vendor('object-fit', 'contain');
