--- a/layouts/partials/schedule_table.html
+++ b/layouts/partials/schedule_table.html
@@ -1,7 +1,7 @@
 <section class="wrapper style1 align-center">
     <div class="inner">
         <h2>The Schedule</h2>
-        <p>The boat departs from casco bay terminals. There is information on directions and parking on their <a href="https://www.cascobaylines.com/about-us/parking-and-directions/">website</a>. The cruise will last a total of three hours, and we'll be making a single stop in the middle to drop off older/younger partygoers and pick up people who may have missed the first departure.</p>
+        <p>The boat departs from Ccasco Bay terminals located at 56 Commercial Street and Maine State Pier. Information on directions and parking can be found on their <a href="https://www.cascobaylines.com/about-us/parking-and-directions/">website</a>. The cruise will last a total of four hours, and we'll be making a single stop in the middle to drop off partygoers and pick up anyone who may have missed the first departure.</p>
         <div class="index align-left">
             <section>
                 <div class="content">
