--- a/layouts/partials/schedule_table.html
+++ b/layouts/partials/schedule_table.html
@@ -28,7 +28,7 @@
                             </tr>
                             <tr>
                                 <td>9:00pm</td>
-                                <td>Boat returns to dock</td>
+                                <td>Boat Returns to Dock</td>
                             </tr>
                             <tr>
                                 <td>9:15pm</td>
@@ -36,7 +36,7 @@
                             </tr>
                             <tr>
                                 <td>10:45pm</td>
-                                <td>Boat's final return to dock.</td>
+                                <td>Boat's Final Return to Dock.</td>
                             </tr>
                             </tbody>
                         </table>
