--- a/themes/hugo-story/exampleSite/layouts/partials/picture.html
+++ b/themes/hugo-story/exampleSite/layouts/partials/picture.html
@@ -1,6 +1,6 @@
 <article>
     <a href="{{ .image }}" class="image">
-        <img src="{{ .thumb }}" alt="" />
+        <img src="/{{ .thumb }}" alt="" />
     </a>
     <div class="caption">
         <h3>{{ .title }}</h3>
