--- a/themes/hugo-story/layouts/partials/spotlight.html
+++ b/themes/hugo-story/layouts/partials/spotlight.html
@@ -8,6 +8,6 @@
         </ul>{{ end }}
     </div>
     {{ with .image }}<div class="image">
-        <img src="{{ . }}" alt="" />
+        <img src="/{{ . }}" alt="" />
     </div>{{ end }}
 </section>
