Fixed locating images

--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -9,6 +9,6 @@
         </ul>{{ end }}
     </div>
     {{ with .image }}<div class="image">
-        <img src="/{{.}}" alt="Flyer" />
+        <img src="{{.}}" alt="Flyer" />
     </div>{{end}}
 </section>
